Contacts done, most info outlined

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#About">About</a></li>
-								<li><a href="#Research">Research</a></li>
-								<li><a href="#Experience">Experience</a></li>
-								<li><a href="#Photos">Photos</a></li>
+								<li><a href="#about">About</a></li>
+								<li><a href="#research">Research</a></li>
+								<li><a href="#experience">Experience</a></li>
+								<li><a href="#photos">Photos</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -44,72 +44,77 @@
 					<div id="main">
 
 						<!-- About -->
-							<article id="About">
+							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/about-colorado.jpeg" alt="" /></span>
 								<p> <strong>Education:</strong> Stony Brook University, B.S. Physics, 2024</p>
-								<p> <strong>Research Interests:</strong> 
-								<br />
+								<p> <strong>Research Interests:</strong> Computational Astrophysics and Cosmology, Machine Learning, Quantum Computing, 
+									Aerospace Engineering, and Space Exploration.
+									<br />
 								Check out my <a href="#Research">research</a>! </p>	
 								<p> <strong>Publications:</strong>
-								<br />
-								</p>
+									<br />
+								<a href="files/DSCDM.pdf" target="_blank">The database of spectroscopic constants of diatomic molecules (DSCDM): A dynamic and 
+									user-friendly interface for molecular physics and spectroscopy</a> </p>
 								<p> <strong>A Little About Me:</strong>
-								<br />
-								</p>
-
+									<br />
+								As you may have already noticed, I really enjoy spending time outdoors. Specifically, mountaineering and backpacking. 
+								Spending time in the mountains is a great way to clear my head and get away from the hustle and bustle of everyday life.
+								But it's also challenging, and I enjoy pushing myself to my limits. I have a tendency to choose the most difficult routes I can find (to my friends' dismay). </p>
+								<p> I also enjoy photography, and so I tend to bring my camera along with me on my adventures. 
+								All photos on this website were taken by me (other than the JWST photo in the research section).
+								If you're interested in seeing more of my photos, you can check out my <a href="#Photos">photos</a> section. </p>
 							</article>
 
 						<!-- Research -->
-							<article id="Research">
+							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/jwt-deepField.png" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p> <strong>Stony Brook University - Strong Lensing</strong> 
+									<br />
+									blahblahblahblah</p>
+								<p> <strong>Stony Brook University - The Database of Spectroscopic Constants of Diatomic Molecules (<a href="https://dscdm.physics.stonybrook.edu/index.html" target="_blank">DSCDM</a>)</strong>
+									<br />
+									blahblahblahblah</p>
 							</article>
 
 						<!-- Experience -->
-							<article id="Experience">
+							<article id="experience">
 								<h2 class="major">Experience</h2>
 								<span class="image main"><img src="images/iceland-landscape.jpeg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p> <strong>Brookhaven National Laboratory - Research Assistant</strong> 
+									<br />
+									blahblahblahblah</p>
+								<p> <strong>Stony Brook University - Software Developer</strong> 
+									<br />
+									blahblahblahblah</p>
+								<p> <strong>Polen Capital - Data Engineer Intern</strong>
+									<br />
+									blahblahblahblah</p>
+								<p> <strong>Formlabs - R&D Engineer Intern</strong>
+									<br />
+									blahblahblahblah</p>
+								<p> <strong>Wolfspeed - Process Engineer Intern</strong>
+									<br />
+									blahblahblahblah</p>
 							</article>
 
 						<!-- Photos -->
-							<article id="Photos">
+							<article id="photos">
 								<h2 class="major">Photos</h2>
 								<span class="image main"><img src="images/pioneer1.jpeg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Hello! This is WIP</p>
+								<span class="image main"><img src="images/maroon-bells.jpeg" alt="" /></span>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<p> <strong>Email: ethanjfranco@gmail.com</strong> </p>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/ethan-franco/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/efranco01" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.instagram.com/ethan.franco/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
 
@@ -171,10 +176,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									</ol>
 									<h4>Icons</h4>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 
 									<h4>Actions</h4>
