Adding some info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 								<span class="image profile"><img src="images/profile-iceland.jpeg" alt="" /></span>
 								<p>Physics Undergraduate<br />
 								Stony Brook University</p>
-								<p> <a href="files/ResumeEF.pdf" target="_blank">Curriculum Vitae</a> </p>
+								<p> <a href="files/ResumeEF.pdf" target="_blank">Résumé</a> <br />
+									<a href="#" target="_blank">Curriculum Vitae</a> </p>
 							</div>
 						</div>
 						<nav>
@@ -48,22 +49,25 @@
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/about-colorado.jpeg" alt="" /></span>
 								<p> <strong>Education:</strong> Stony Brook University, B.S. Physics, 2024</p>
-								<p> <strong>Research Interests:</strong> Computational Astrophysics and Cosmology, Machine Learning, Quantum Computing, 
+								<p> <strong>Research Interests:</strong> Computational Astrophysics and Cosmology, Machine Learning, Optimization,
 									Aerospace Engineering, and Space Exploration.
 									<br />
-								Check out my <a href="#Research">research</a>! </p>	
+								Check out my <a href="#research">research</a>! </p>	
 								<p> <strong>Publications:</strong>
 									<br />
 								<a href="files/DSCDM.pdf" target="_blank">The database of spectroscopic constants of diatomic molecules (DSCDM): A dynamic and 
 									user-friendly interface for molecular physics and spectroscopy</a> </p>
+								<p> <strong>Presentations:</strong>
+									<br />
+									Presented work on <a href="files/ugrad-research-dmsd.pdf" target="_blank">DSCDM</a> (DMSD at the time) during Undergradute Research Day at Stony Brook University </p>
 								<p> <strong>A Little About Me:</strong>
 									<br />
-								As you may have already noticed, I really enjoy spending time outdoors. Specifically, mountaineering and backpacking. 
-								Spending time in the mountains is a great way to clear my head and get away from the hustle and bustle of everyday life.
-								But it's also challenging, and I enjoy pushing myself to my limits. I have a tendency to choose the most difficult routes I can find (to my friends' dismay). </p>
+									As you may have already noticed, I really enjoy spending time outdoors. Specifically, mountaineering and backpacking. 
+									Spending time in the mountains is a great way to clear my head and get away from the hustle and bustle of everyday life.
+									But it's also challenging, and I enjoy pushing myself to my limits. I have a tendency to choose the most difficult routes I can find (to my friends' dismay). </p>
 								<p> I also enjoy photography, and so I tend to bring my camera along with me on my adventures. 
-								All photos on this website were taken by me (other than the JWST photo in the research section).
-								If you're interested in seeing more of my photos, you can check out my <a href="#Photos">photos</a> section. </p>
+									All photos on this website were taken by me (other than the JWST photo in the research section).
+									If you're interested in seeing more of my photos, you can check out my <a href="#photos">photos</a> section. </p>
 							</article>
 
 						<!-- Research -->
@@ -72,10 +76,17 @@
 								<span class="image main"><img src="images/jwt-deepField.png" alt="" /></span>
 								<p> <strong>Stony Brook University - Strong Lensing</strong> 
 									<br />
-									blahblahblahblah</p>
+									Developing advanced lens models using the <a href="https://lenstronomy.readthedocs.io/en/latest/" target="_blank">'lenstronomy'</a>
+									Python library to predict time delays in the triply-imaged type Ia 'Supernova H0pe' within galaxy clusters. This work is crucial for understanding 
+									cosmic scales and refining the Hubble constant (H0) by analyzing how galaxy clusters magnify and distort light from distant supernovae. 
+									Our goal is to enhance the accuracy of these models and deepen our knowledge of gravitational lensing phenomena, aiding in the exploration of 
+									dark matter distribution in the universe and contributing to key debates in cosmology</p>
 								<p> <strong>Stony Brook University - The Database of Spectroscopic Constants of Diatomic Molecules (<a href="https://dscdm.physics.stonybrook.edu/index.html" target="_blank">DSCDM</a>)</strong>
 									<br />
-									blahblahblahblah</p>
+									In collaboration with a team, I contributed to the development of the Database for Spectroscopic Constants of Diatomic Molecules (DSCDM), 
+									integrating machine learning with to predict properties of untested molecules. This effort, coupled with advanced data analysis techniques, 
+									significantly improved the database's accuracy and usability. Our work has facilitated more efficient and precise research 
+									in molecular spectroscopy.</p>
 							</article>
 
 						<!-- Experience -->
@@ -84,19 +95,29 @@
 								<span class="image main"><img src="images/iceland-landscape.jpeg" alt="" /></span>
 								<p> <strong>Brookhaven National Laboratory - Research Assistant</strong> 
 									<br />
-									blahblahblahblah</p>
+									Currently working on optimizing the Central Reconstruction Service (CRS) in the Scientific Data and Computing Center.</p>
 								<p> <strong>Stony Brook University - Software Developer</strong> 
 									<br />
-									blahblahblahblah</p>
+									Building automation tools for the Integrative Neuroscience Group at Stony Brook University.</p>
 								<p> <strong>Polen Capital - Data Engineer Intern</strong>
 									<br />
-									blahblahblahblah</p>
+									I spearheaded the integration of Python-Azure data pipelines, automating data reporting processes and yielding significant time savings of 12.65 hours daily, 
+									while also cutting down on third-party subscription costs. This initiative notably reduced the time required for monthly and quarterly tasks by 100 and 15 hours 
+									respectively. Additionally, I developed a scalable Python API using Azure Functions, which facilitated secure and expandable cloud-based web scraping, enhancing 
+									our data acquisition capabilities.</p>
 								<p> <strong>Formlabs - R&D Engineer Intern</strong>
 									<br />
-									blahblahblahblah</p>
+									I designed and implemented full-stack automation tools using Python and JavaScript (React.js), significantly streamlining materials research and development processes. 
+									In a key project, I developed a force model and executed a design of experiments that achieved a 40% reduction in support structure generation time, while maintaining 
+									high print stability and success rates. Additionally, I optimized industrial photopolymer resins, cutting print times by an average of 3 hours and achieving a 100% 
+									success rate during validation. My work also included expanding optimization-related tooling for the Selective Laser Sintering (SLS) material development team, which 
+									enhanced print processes and quality</p>
 								<p> <strong>Wolfspeed - Process Engineer Intern</strong>
 									<br />
-									blahblahblahblah</p>
+									I conducted an analysis of historical Physical Vapor Deposition (PVD) data using Microsoft Access and SAS, pinpointing the root causes of AU spitting events during the 
+									deposition process. Building on this analysis, I developed a real-time, data-driven predictive model to monitor deposition, which successfully reduced out-of-specification 
+									batches by 30% and facilitated optimized post-processing. The implementation of this predictive model across the company significantly enhanced performance efficiency and 
+									improved overall product quality.</p>
 							</article>
 
 						<!-- Photos -->
