Added times for experience section

--- a/index.html
+++ b/index.html
@@ -93,26 +93,26 @@
 							<article id="experience">
 								<h2 class="major">Experience</h2>
 								<span class="image main"><img src="images/iceland-landscape.jpeg" alt="" /></span>
-								<p> <strong>Brookhaven National Laboratory - Research Assistant</strong> 
+								<p> <strong>Brookhaven National Laboratory - Research Assistant (Current)</strong>
 									<br />
 									Currently working on optimizing the Central Reconstruction Service (CRS) in the Scientific Data and Computing Center.</p>
-								<p> <strong>Stony Brook University - Software Developer</strong> 
+								<p> <strong>Stony Brook University - Software Developer (Current)</strong> 
 									<br />
 									Building automation tools for the Integrative Neuroscience Group at Stony Brook University.</p>
-								<p> <strong>Polen Capital - Data Engineer Intern</strong>
+								<p> <strong>Polen Capital - Data Engineer Intern (2023)</strong>
 									<br />
 									I spearheaded the integration of Python-Azure data pipelines, automating data reporting processes and yielding significant time savings of 12.65 hours daily, 
 									while also cutting down on third-party subscription costs. This initiative notably reduced the time required for monthly and quarterly tasks by 100 and 15 hours 
 									respectively. Additionally, I developed a scalable Python API using Azure Functions, which facilitated secure and expandable cloud-based web scraping, enhancing 
 									our data acquisition capabilities.</p>
-								<p> <strong>Formlabs - R&D Engineer Intern</strong>
+								<p> <strong>Formlabs - R&D Engineer Intern (2022)</strong>
 									<br />
 									I designed and implemented full-stack automation tools using Python and JavaScript (React.js), significantly streamlining materials research and development processes. 
 									In a key project, I developed a force model and executed a design of experiments that achieved a 40% reduction in support structure generation time, while maintaining 
 									high print stability and success rates. Additionally, I optimized industrial photopolymer resins, cutting print times by an average of 3 hours and achieving a 100% 
 									success rate during validation. My work also included expanding optimization-related tooling for the Selective Laser Sintering (SLS) material development team, which 
 									enhanced print processes and quality</p>
-								<p> <strong>Wolfspeed - Process Engineer Intern</strong>
+								<p> <strong>Wolfspeed - Process Engineer Intern (2021)</strong>
 									<br />
 									I conducted an analysis of historical Physical Vapor Deposition (PVD) data using Microsoft Access and SAS, pinpointing the root causes of AU spitting events during the 
 									deposition process. Building on this analysis, I developed a real-time, data-driven predictive model to monitor deposition, which successfully reduced out-of-specification 
